fix overflow

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -27,7 +27,8 @@ h1 {
   display: flex;
   flex-direction: column;
   overflow-x: auto;
-  justify-content: center;
+  flex-wrap: nowrap;
+  white-space: nowrap;
   padding-inline: 1.5rem;
 }
 
@@ -39,6 +40,7 @@ h1 {
   grid-gap: 4px;
   margin: 3rem 0rem;
   position: relative;
+  margin:auto;
   // overflow-x:auto;
 }
 
